test/fail/ok/non-persistent1.tc-human.ok
error[M0219]: this declaration is currently implicitly transient, please declare it explicitly `transient`
    ┌─ non-persistent1.mo:4:3
  4 │    var _y = #y; // error
    │    ^^^^^^^^^^^ 
